--- a/code/MonitorTasks/appsettings.json
+++ b/code/MonitorTasks/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "MonitorTaskSchedulerDbConnection": "Server=.\\Dev;initial catalog=MonitorTaskScheduler;Integrated Security=true;MultipleActiveResultSets=true;App=MonitorTasksConsole;"
+    "MonitorTaskSchedulerDbConnection": "Server=.\\Dev;initial catalog=MonitorTaskScheduler;Integrated Security=true;MultipleActiveResultSets=true;App=MonitorTasksConsole;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
