change length of task primary key

--- a/code/TaskSchedulerBusiness/TaskSchedulerBusiness.csproj
+++ b/code/TaskSchedulerBusiness/TaskSchedulerBusiness.csproj
@@ -10,6 +10,9 @@
     <None Update="dump-tasks.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="MonitorTaskScheduler-DbSchema.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +22,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
